# stonehearts

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  main.py  types.py
backend/app/alembic/: env.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analyze.py  auth.py  game.py  user.py
backend/app/auth/: __init__.py  google_auth.py  jwt.py
backend/app/crud/: __init__.py  analyze.py  game.py  user.py
backend/app/models/: __init__.py  analysis.py  game.py  move.py  user.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  game.py  user.py
backend/app/utils/: game.py
frontend/: .gitignore  Dockerfile  nuxt.config.ts  package.json  tsconfig.json
frontend/components/auth/: GoogleLoginButton.vue  LoginDialog.vue
frontend/components/go/: EmptyBoard.vue  GoAiCandidateMove.vue  GoAnalysis.vue  GoBoard.vue  GoCardList.vue  GoChart.vue  GoGameDetail.vue  GoGameHeader.vue  GoGameLayout.vue  GoGrid.vue  GoNavigation.vue  GoRootAnalysis.vue  (+2 more)
frontend/constants/: analysis.ts  board.ts
frontend/layouts/: default.vue
frontend/middleware/: auth.ts
frontend/pages/: index.vue
frontend/plugins/: googleLogin.client.ts  vuetify.ts
frontend/services/: analysisService.ts  apiClient.ts  authService.ts  boardService.ts  gameService.ts  helperService.ts  navigationService.ts
frontend/stores/: authStore.ts  gameListStore.ts  userStore.ts
frontend/types/: apiAuthTypes.ts  apiGameTypes.ts  goTypes.ts
(+18 files in other folders)
